(lang dune 3.0)

(name networld)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name networld)
 (synopsis "Network simulation with effects and fibers")
 (description "A network simulation library using OCaml effects and fibers")
 (depends
  (ocaml (>= 5.0.0))
  dune
  effect))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
